Start of cd support, create param support, prompting for missing options